--- a/pages/212.html
+++ b/pages/212.html
@@ -635,22 +635,22 @@ margin-left: 0em;
 
 <p><em>Alg</em> is the <a class='existingWikiWord' href='/nlab/show/category'>category</a> with <a class='existingWikiWord' href='/nlab/show/algebra'>algebras</a> as <a class='existingWikiWord' href='/nlab/show/object'>objects</a> and algebra homomorphisms as <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a>s.</p>
 
-<p>More abstractly, we can think of <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi></mrow><annotation encoding='application/x-tex'>Alg</annotation></semantics></math> as the <a class='existingWikiWord' href='/nlab/show/category'>full subcategory</a> of <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi><mo stretchy='false'>(</mo><mi>Vect</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Cat(Vect)</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/internal+category'>internal categories</a> in <a class='existingWikiWord' href='/nlab/show/Vect'>Vect</a>, with algebras as objects.</p>
+<p>More abstractly, we can think of <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi></mrow><annotation encoding='application/x-tex'>Alg</annotation></semantics></math> as the <a class='existingWikiWord' href='/nlab/show/category'>full subcategory</a> of <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi><mo stretchy='false'>(</mo><mi>Vect</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Cat(Vect)</annotation></semantics></math>, <a class='existingWikiWord' href='/nlab/show/internal+category'>internal categories</a> in <a class='existingWikiWord' href='/nlab/show/Vect'>Vect</a>, with algebras as objects.</p>
 
 <h2 id='properties'>Properties</h2>
 
 <h3 id='relation_to_algebras_with_bimodules'>Relation to algebras with bimodules</h3>
 
-<p>Since algebras may be identified with one-object <a class='existingWikiWord' href='/nlab/show/category'>categories</a> <a class='existingWikiWord' href='/nlab/show/internalization'>internal to</a> vector spaces, it is sometimes useful to regard <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi></mrow><annotation encoding='application/x-tex'>Alg</annotation></semantics></math> as a strict 2-category, namely as a full sub-2-category of the 2-category <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi><mo stretchy='false'>(</mo><mi>Vect</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Cat(Vect)</annotation></semantics></math>. In this case the 2-morphisms between morphisms of algebras come from “intertwiners”: inner endomorphisms of the target algebra.</p>
+<p>Since algebras may be identified with one-object <a class='existingWikiWord' href='/nlab/show/category'>categories</a> <a class='existingWikiWord' href='/nlab/show/internalization'>internal to</a> vector spaces, it is sometimes useful to regard <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi></mrow><annotation encoding='application/x-tex'>Alg</annotation></semantics></math> as a strict 2-category, namely as a full sub-2-category of the 2-category <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi><mo stretchy='false'>(</mo><mi>Vect</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Cat(Vect)</annotation></semantics></math>. In this case the 2-morphisms between morphisms of algebras come from “intertwiners”: inner endomorphisms of the target algebra.</p>
 
 <p>Precisely analogous statements hold for the category <a class='existingWikiWord' href='/nlab/show/Grp'>Grp</a> of groups.</p>
 
-<p>With <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi></mrow><annotation encoding='application/x-tex'>Alg</annotation></semantics></math> regarded as a strict 2-category this way there is a canonical 2-functor</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi><mo>↪</mo><mi>Bimod</mi></mrow><annotation encoding='application/x-tex'>
+<p>With <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi></mrow><annotation encoding='application/x-tex'>Alg</annotation></semantics></math> regarded as a strict 2-category this way there is a canonical 2-functor</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi><mo>↪</mo><mi>Bimod</mi></mrow><annotation encoding='application/x-tex'>
   Alg \hookrightarrow Bimod
 
 </annotation></semantics></math></div>
-<p>to the category <a class='existingWikiWord' href='/nlab/show/Bimod'>Bimod</a>, which sends algebra homomorphisms <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>f : A \to B</annotation></semantics></math> to the <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> bimodule <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mrow></mrow> <mi>f</mi></msub><mi>B</mi></mrow><annotation encoding='application/x-tex'>{}_f B</annotation></semantics></math>. This exhibits <math class='maruku-mathml' display='inline' id='mathml_df6335f1f5a801ebb0e8055b00e03cdfb1ed9369_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Bimod</mi></mrow><annotation encoding='application/x-tex'>Bimod</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/framed+bicategory'>framed bicategory</a> in the sense of Shulman.</p>
+<p>to the category <a class='existingWikiWord' href='/nlab/show/Bimod'>Bimod</a>, which sends algebra homomorphisms <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>f</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>B</mi></mrow><annotation encoding='application/x-tex'>f : A \to B</annotation></semantics></math> to the <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> bimodule <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mrow></mrow> <mi>f</mi></msub><mi>B</mi></mrow><annotation encoding='application/x-tex'>{}_f B</annotation></semantics></math>. This exhibits <math class='maruku-mathml' display='inline' id='mathml_9008feb3ce536277ddb5877f571c45f7edfa74e4_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Bimod</mi></mrow><annotation encoding='application/x-tex'>Bimod</annotation></semantics></math> as a <a class='existingWikiWord' href='/nlab/show/framed+bicategory'>framed bicategory</a> in the sense of Shulman.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -661,6 +661,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Mod'>Mod</a>, <a class='existingWikiWord' href='/nlab/show/2Mod'>2Mod</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2Cn%29-module'>nMod</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/dgcAlg'>dgcAlg</a></p>
 </li>
 
 <li>
@@ -680,14 +684,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 22, 2018 at 10:47:48.
+  Last revised on July 23, 2018 at 15:30:07.
   See the <a href="https://ncatlab.org/nlab/history/Alg" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Alg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alg/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Alg" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alg" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Alg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Alg/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Alg" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Alg" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Alg/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
