--- a/pages/4173.html
+++ b/pages/4173.html
@@ -1115,6 +1115,18 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/relativistic+quantum+field+theory'>relativistic field theory</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Penrose-Hawking+theorem'>Penrose-Hawking theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cosmic+censorship+hypothesis'>cosmic censorship</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -1137,7 +1149,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>Alan A. Coley, <em>Mathematical General Relativity</em> (<a href='https://arxiv.org/abs/1807.08628'>arXiv:1807.08628</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Alan+Coley'>Alan Coley</a>, <em>Mathematical General Relativity</em> (<a href='https://arxiv.org/abs/1807.08628'>arXiv:1807.08628</a>)</p>
 </li>
 </ul>
 
@@ -1158,7 +1170,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on July 24, 2018 at 00:58:45.
+  Last revised on July 24, 2018 at 01:16:24.
   See the <a href="https://ncatlab.org/nlab/history/general relativity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
