--- a/pages/9183.html
+++ b/pages/9183.html
@@ -10,8 +10,8 @@
   <meta name="robots" content="index,follow" />
   
  
-  <link href="/stylesheets/instiki.css?1505574123" media="all" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/syntax.css?1505574123" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/instiki.css?1531905161" media="all" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/syntax.css?1531905161" media="all" rel="stylesheet" type="text/css" />
   <style type="text/css">
     h1#pageName, div.info, .newWikiWord a, a.existingWikiWord, .newWikiWord a:hover, [actiontype="toggle"]:hover, #TextileHelp h3 { 
       color: #008B26; 
@@ -208,13 +208,13 @@ margin-left: 0em;
     
     
   /*]]>*/--></style>
-  <script src="/javascripts/prototype.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/effects.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/dragdrop.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/controls.js?1505574123" type="text/javascript"></script>
-<script src="/javascripts/application.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/page_helper.js?1505574123" type="text/javascript"></script>
-  <script src="/javascripts/thm_numbering.js?1505574123" type="text/javascript"></script>
+  <script src="/javascripts/prototype.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/effects.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/dragdrop.js?1531905164" type="text/javascript"></script>
+<script src="/javascripts/controls.js?1531905163" type="text/javascript"></script>
+<script src="/javascripts/application.js?1531905163" type="text/javascript"></script>
+  <script src="/javascripts/page_helper.js?1531905162" type="text/javascript"></script>
+  <script src="/javascripts/thm_numbering.js?1531905162" type="text/javascript"></script>
   
   <script type="text/x-mathjax-config">
   <!--//--><![CDATA[//><!--
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4666/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4666/#Item_16" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -762,7 +762,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/conformal+field+theory'>CFT</a></p>
+<p><span class='newWikiWord'>CFT<a href='/nlab/new/CFT'>?</a></span></p>
 
 <ul>
 <li>
@@ -1122,6 +1122,10 @@ margin-left: 0em;
 <p>Resonaances, <em><a href='http://resonaances.blogspot.de/2013/01/how-many-neutrinos-in-sky.html'>How many neutrinos in the sky</a></em></p>
 </li>
 
+<li id='BertoneHooper16'>
+<p>Gianfranco Bertone, Dan Hooper, <em>A History of Dark Matter</em> (<a href='https://arxiv.org/abs/1605.04909'>arXiv:1605.04909</a>)</p>
+</li>
+
 <li id='Hooper18'>
 <p><a class='existingWikiWord' href='/nlab/show/Daniel+Hooper'>Daniel Hooper</a>, <em>In Defense of Dark Matter</em>, 2018 (<a href='http://online.kitp.ucsb.edu/online/cdm-c18/hooper/'>web</a>)</p>
 </li>
@@ -1186,14 +1190,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May  7, 2018 at 12:44:59.
+  Last revised on July 25, 2018 at 04:49:14.
   See the <a href="https://ncatlab.org/nlab/history/dark matter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/dark+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/dark+matter/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/dark+matter" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/dark+matter" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/dark matter/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
